authorization/static/css/window.css
.card-header{
    background: #242425;
}

.card-footer{
    background-color: white;
    border-top-style: none;
}

.window{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 370.5px;
}

#authorization-window{

}

#log-in{
    display: block;
    text-align: center;

    color: white;
}

#registration-window{

}

.field{
    display: block;
    width: 100%
}

.btn{
    background-color: #242425;
    box-shadow: 0.5px 0.5px black;

    color: white;
}

.btn:hover{
    background-color: #555557;

    color: white;

    box-shadow: none;
}

li{
    color: red;
}

